--- a/infoCard.css
+++ b/infoCard.css
@@ -79,7 +79,7 @@ body {
 .card h1 {
     color: white;
     font-size: 30px;
-    letter-spacing: 20px;
+    /* letter-spacing: 20px; */
     margin-bottom: -20px;
     margin-top: -20px;
     font-weight: 300;
